src/components/sideBar/SideBar.css
.sideBar-contents{
    position:absolute;
    right: 0;
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 35%;
    padding: 20px 20px 100px 20px;
    gap: 20px;
    background-color: var(--white);
    animation: slideIn 0.5s ease-in-out;
}

.sideBar-header{
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    padding-bottom: 50px;

    img{
        width: 30px;
        height: 30px;
    }
}

.sideBar-1{
    display: flex;
    justify-content: space-between;
    font-size: var(--font-size-4);
    font-weight: var(--bold);
    position: relative;

    img{
        width: 20px;
        height: 20px;
        transform: translateY(25%);
    }
}

.sideBar-2{
    display: flex;
    flex-direction: column;
    gap:10px;
    justify-content: space-between;
    font-size: var(--font-size-5);
    font-weight: var(--bold);
    color: var(--black-opacity-75);
    position: relative;
    padding-top: 20px;
    margin-top: 10px;
    border-top: 1px solid var(--black-opacity-25);
}


.sideBar-3{
    display: flex;
    font-size: var(--font-size-7);
    justify-content: space-between;
    font-weight: var(--medium);

    img{
        width: 20px;
        height: 20px;
    }
}

.border-yellow{
    border-top: 3px solid var(--sub-color-2);
    padding-top: 20px;
}

.close-btn{
    cursor: pointer;
}

@keyframes slideIn {
    from {
        transform: translateX(100%);
    }
    to {
        transform: translateX(0);
    }
}

@keyframes slideOut {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(100%);
    }
    
}

